@@ -37,8 +37,6 @@ class Net::SSLeay::SSL_CTX : pointer {
   use StringList;
   
   # Class Variables
-  our $PSK_CLIENT_CBS : Hash of Net::SSLeay::Callback::PskClient;
-  
   our $PSK_SERVER_CBS : Hash of Net::SSLeay::Callback::PskServer;
   
   our $TLSEXT_TICKET_KEY_CBS : Hash of Net::SSLeay::Callback::TlsextTicketKey;
@@ -52,8 +50,6 @@ class Net::SSLeay::SSL_CTX : pointer {
   our $MUTEX : Sync::Mutex;
   
   INIT {
-    $PSK_CLIENT_CBS = Hash->new;
-    
     $PSK_SERVER_CBS = Hash->new;
     
     $TLSEXT_TICKET_KEY_CBS = Hash->new;
@@ -149,8 +145,6 @@ class Net::SSLeay::SSL_CTX : pointer {
   
   native method set_tlsext_servername_callback : long ($cb : Net::SSLeay::Callback::TlsextServername, $arg : object = undef);
   
-  native method set_psk_client_callback : void ($cb : Net::SSLeay::Callback::PskClient);
-  
   native method set_psk_server_callback : void ($cb : Net::SSLeay::Callback::PskServer);
   
   native method set_tlsext_ticket_key_cb : void ($cb : Net::SSLeay::Callback::TlsextTicketKey);
@@ -160,43 +154,6 @@ class Net::SSLeay::SSL_CTX : pointer {
   native method sess_set_remove_cb : void ($cb : Net::SSLeay::Callback::NewSession);
   
   native method DESTROY : void ();
-  
-  private method GET_PSK_CLIENT_CB : Net::SSLeay::Callback::PskClient ($key : string) {
-    
-    Fn->defer(method : void () {
-      $MUTEX->reader_unlock;
-    });
-    
-    $MUTEX->reader_lock;
-    
-    my $psk_client_cb = (Net::SSLeay::Callback::PskClient)$PSK_CLIENT_CBS->get($key);
-    
-    return $psk_client_cb;
-  }
-  
-  private method SET_PSK_CLIENT_CB : void ($key : string, $psk_client_cb : Net::SSLeay::Callback::PskClient) {
-    
-    Fn->defer(method : void () {
-      $MUTEX->unlock;
-    });
-    
-    $MUTEX->lock;
-    
-    $PSK_CLIENT_CBS->set($key, $psk_client_cb);
-  }
-  
-  private method DELETE_PSK_CLIENT_CB : Net::SSLeay::Callback::PskClient ($key : string) {
-    
-    Fn->defer(method : void () {
-      $MUTEX->unlock;
-    });
-    
-    $MUTEX->lock;
-    
-    my $deleted = (Net::SSLeay::Callback::PskClient)$PSK_CLIENT_CBS->delete($key);
-    
-    return $deleted;
-  }
   
   private method GET_PSK_SERVER_CB : Net::SSLeay::Callback::PskServer ($key : string) {
     
